src/objects/Access_Token__c.object
<CustomObject>
    <description>Token for accessing the user profile API at account.companieshouse.gov.uk.</description>
    <fields>
        <fullName>Access_Token__c</fullName>
        <inlineHelpText>Token required for accessing the user profile API at account.companieshouse.gov.uk. May be short-lived.</inlineHelpText>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expires__c</fullName>
        <inlineHelpText>Access tokens are short-lived. If this date has passed, the token should be refreshed.</inlineHelpText>
        <label>Expires</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Nonce__c</fullName>
        <inlineHelpText>A nonce is a number used only once. We pass this to account.companieshouse.gov.uk when getting an auth code, and they pass it back to us on a redirect.</inlineHelpText>
        <label>Nonce</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <inlineHelpText>Use this token to refresh an expired access token.</inlineHelpText>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Access Token</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Nonce__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>Access Token Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Tokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>